# faBackupClient

./: .gitmodules  Dockerfile  FAUploads.db  client.py  compose.yaml  docker.py  pyproject.toml  run.py  tor_client.py
ipfs-init/: bootstrap.sh
tor/: Dockerfile  torrc
