[tool.poetry]
name = "fascrapeclient"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = {extras = ["socks"], version = "^2.32.3"}
falocalrepo = {path = "falocalrepo"}
faapi = {path = "faapi"}
ipfshttpclient = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
